# Casin-JMAP-Server

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  start.sh
docs/: arc_rtc_protocol.md  billion_user_architecture.md  developer_handbook.md
elixir_realtime/: mix.exs
elixir_realtime/config/: config.exs
elixir_realtime/lib/armoricore_scheduling/: arc_rtc_channel.ex  nats_consumer.ex
elixir_realtime/lib/armoricore_scheduling/ack/: ack_deadline_server.ex
elixir_realtime/lib/armoricore_scheduling/channels/: schedule_channel.ex
elixir_realtime/lib/armoricore_scheduling/email/: shift_notifier.ex
elixir_realtime/lib/armoricore_scheduling/push/: employee_push_server.ex
elixir_realtime/lib/armoricore_scheduling/sync/: apple_caldav_worker.ex  google_calendar_worker.ex  microsoft_graph_worker.ex
elixir_realtime/lib/armoricore_web/controllers/scheduling/: invite_controller.ex
elixir_realtime/lib/armoricore_web/live/scheduling/: employee_dashboard_live.ex  management_dashboard_live.ex
rust-services/jmap-scheduler/: Cargo.toml
rust-services/jmap-scheduler/src/: main.rs
rust-services/jmap-scheduler/src/auth/: jwt.rs  mod.rs  rights.rs
rust-services/jmap-scheduler/src/crypto/: token_vault.rs
rust-services/jmap-scheduler/src/db/: exclusion_tests.rs  migrations.rs  mod.rs
rust-services/jmap-scheduler/src/jmap/: calendar_event.rs  methods.rs  mod.rs  session.rs
rust-services/jmap-scheduler/src/models/: calendar_event.rs  mod.rs
rust-services/jmap-scheduler/src/nats/: mod.rs  publisher.rs
